--- a/docs/templates_parser.texi
+++ b/docs/templates_parser.texi
@@ -322,11 +322,18 @@ Returns the absoute value.
 Add a parameter into an URL. This routine adds the '?' and '&'
 character if needed. @i{VALUE} can be a tag variable name.
 
+@item BR_2_EOL(@i{EOL})
+@cindex Filter, BR_2_EOL
+
+Replaces all occurrences of the @code{<br>} HTML tag by a line terminator
+determined by EOL. EOL must be either CR (Carriage-Return), LF (Line-Feed),
+LFCR (Line-Feed followed by Carriage-Return) or CRLF (Line-Feed followed
+by Carriage-Return).
+
 @item BR_2_LF
 @cindex Filter, BR_2_LF
 
-Replaces all occurrences of the @code{<br>} HTML tag by a LF
-(Line-Feed) character.
+Shortcut for BR_2_EOL(LF).
 
 @item CAPITALIZE
 @cindex Filter, CAPITALIZE
