--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-14  Pascal Obry  <pascal@obry.net>
+
+	* templates_parser.adb, templates_parser-filter.adb:
+	Use Ada.Containers instead of internal AI302.
+	Update copyright notice.
+
 2005-06-27  Pascal Obry  <pascal@obry.net>
 
 	* templates_parser-input__standalone.adb:
@@ -6,7 +12,7 @@
 	* templates_parser.adb:
 	(Release): Fix previous check-in to avoid memory leak.
 	Continued work for E527-017.
-	
+
 2005-06-27  Pascal Obry  <pascal@obry.net>
 
 	* templates_parser.adb:
