--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-14  Pascal Obry  <pascal@obry.net>
+
+	* templates_parser-xml.adb:
+	Use Ada.Containers instead of internal AI302.
+	Update copyright notice.
+
 2005-05-14  Pascal Obry  <pascal@obry.net>
 
 	* templates_parser-xml.adb:
