* templates_parser.adb: (Inline_Parameter): New routine used to parse the inline parameters. This  routine adds support for control characters.
* testme73.tmplt:
Double the backslash as required by the new INLINE tag parameters.

* testme75.out:

* testme75.tmplt:
Add test for control characters in INLINE parameters.

* templates_parser.texi:
Document the INLINE parameter control characters support.
--
Adds support for INLINE parameter control characters.
Work for FA23-008.

--- a/docs/templates_parser.texi
+++ b/docs/templates_parser.texi
@@ -1382,6 +1382,20 @@ In this case all three values are explicitly given.
 @end table
 
 @noindent
+@i{<before>}, @i{<separator>} and @i{<after>} may contain control characters:
+
+@table @code
+@item \n
+To insert a new-line (CR+LF or LF depending on the Operation System)
+
+@item \r
+To insert a line-feed
+
+@item \\
+To insert a single backslash
+@end table
+
+@noindent
 Let's look at an example, with the following template:
 
 @include table_inline.tmplt.texi
